K8S/armory-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: armory-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: armory-service
  template:
    metadata:
      labels:
        app: armory-service
    spec:
      containers:
        - name: armory-service
          image: localhost:5000/armory-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: armory-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: armory-service
  ports:
    - name: armory-service-port
      protocol: TCP
      port: 80
      targetPort: 80
