K8S/elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.4.1
          ports:
            - name: elastic-port
              containerPort: 9200
          volumeMounts:
            - name: elasticsearch-data
              mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: elasticsearch-data
          persistentVolumeClaim:
            claimName: elasticsearch-local-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: elasticsearch
  ports:
    - name: elastic-port
      protocol: TCP
      port: 9200
      targetPort: 9200
