K8S/jaeger-tracing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger-tracing
  template:
    metadata:
      labels:
        app: jaeger-tracing
    spec:
      containers:
        - name: jaeger-tracing
          image: jaegertracing/all-in-one:latest
          ports:
            - containerPort: 5775
              protocol: UDP
            - containerPort: 6831
              protocol: UDP
            - containerPort: 6832
              protocol: UDP
            - containerPort: 5778
              protocol: TCP
            - containerPort: 16686
              protocol: TCP
            - containerPort: 9411
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: jaeger-tracing
  ports:
    - name: jaeger-agent-port
      protocol: UDP
      port: 6831
      targetPort: 6831
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-ui-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: jaeger-tracing
  ports:
    - name: jaeger-ui-port
      protocol: TCP
      port: 16686
      targetPort: 16686
