K8S/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.4.1
          ports:
            - name: kibana-port
              containerPort: 5601
          volumeMounts:
            - name: kibana-data
              mountPath: /usr/share/kibana/data
      volumes:
        - name: kibana-data
          persistentVolumeClaim:
            claimName: kibana-local-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: kibana
  ports:
    - name: kibana-port
      protocol: TCP
      port: 5601
      targetPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: kibana
  ports:
    - name: kibana-port
      protocol: TCP
      port: 5601
      targetPort: 5601
