K8S/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.11-management
          ports:
              - name: management-port
                containerPort: 15672
              - name: messaging-port
                containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: management-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: messaging-port
      protocol: TCP
      port: 5672
      targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    - name: management-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: messaging-port
      protocol: TCP
      port: 5672
      targetPort: 5672
